--- a/sass/components/_latest_projects.scss
+++ b/sass/components/_latest_projects.scss
@@ -1,5 +1,5 @@
 .projects {
-  padding-bottom: 10rem;
+  padding-bottom: 6.3rem;
 
   &-heading {
     border-top: 0.1rem solid rgba(128, 128, 128, 0.353);
