--- a/sass/components/_timeline.scss
+++ b/sass/components/_timeline.scss
@@ -3,7 +3,7 @@
 .timeline {
   border-radius: 15px;
   box-shadow: 0 0.1rem 0.4rem 0 var(--box-shadow);
-  margin-bottom: 10rem;
+  margin-bottom: 8.5rem;
   padding: 2rem;
   // Items box
   .item {
