--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -1,7 +1,7 @@
 .presentation {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 10rem;
+  margin-bottom: 7rem;
 
   &-about {
     flex-basis: 40%;
