--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -83,7 +83,7 @@
   }
 
   .hero-banner {
-    margin-top: 1rem;
+    margin-top: 2rem;
   }
 
   .main-header {
